@@ -319,6 +319,9 @@ but not really useful in that context.
     will have this command executed whenever the prompt content changes
     or the prompt is aborted, respectively.
 
+    The *-history-register <register-name>* switch selects which register
+    to use to load and store history for this prompt.
+
     Completion support can be controlled with the same switches provided
     by the *define-command* command, see
     <<declaring-new-commands,Declaring new commands>>.
